# plotlib

./: Cargo.toml
examples/: barchart_svg.rs  boxplot_svg.rs  contourplot_svg.rs  function_svg.rs  histogram_svg.rs  imgrid_svg.rs  scatter_druid.rs  scatter_svg.rs  with_grid.rs
src/: colormap.rs  druid_render.rs  druid_widget.rs  lib.rs  page.rs  render.rs  style.rs  svg_render.rs  text_render.rs  view.rs
src/repr/: contour.rs  imgrid.rs  mod.rs  scatter.rs
