[package]
name = "plotlib"
version = "0.4.0"
authors = ["Matt Williams <matt@milliams.com>"]
description = "Pure Rust plotting library"
readme = "README.md"
license = "MIT"
edition = "2018"
repository = "https://github.com/milliams/plotlib"
categories = ["visualization", "science"]
keywords = ["plotting", "plot", "graph", "chart", "histogram"]

[badges]
travis-ci = { repository = "milliams/plotlib" }

[dependencies]
svg = "0.6.0"
failure = "0.1.6"
hex = "0.3.1"
image = "0.19.0"
base64 = "0.11.0"
